<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f2f1f6"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/tom_bottom_frame_bg"
            android:orientation="vertical"
            android:padding="1dp" >

            <RelativeLayout
                android:id="@+id/rl_name_layout"
                style="@style/nomal_margin_left"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bar_height"
                android:background="@drawable/edit_frame_bg"
                android:gravity="center_vertical"
                android:onClick="onClick" >

                <TextView
                    style="@style/basic_info_titile_style"
                    android:text="@string/name_str" />

                <TextView
                    android:id="@+id/tv_basicinfo_name"
                    style="@style/basic_info_value_style"
                    android:gravity="end"
                    android:hint="@string/name_hint" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_school_name"
                style="@style/nomal_margin_left"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bar_height"
                android:background="@drawable/edit_frame_bg"
                android:gravity="center_vertical"
                android:onClick="onClick" >

                <TextView
                    style="@style/basic_info_titile_style"
                    android:text="@string/school_name_str" />

                <TextView
                    android:id="@+id/tv_school_name"
                    style="@style/basic_info_value_style"
                    android:gravity="end"
                    android:hint="@string/school_name_hint" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_major_type"
                style="@style/nomal_margin_left"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bar_height"
                android:background="@drawable/edit_frame_bg"
                android:gravity="center_vertical"
                android:onClick="onClick" >

                <TextView
                    style="@style/basic_info_titile_style"
                    android:text="@string/major_type_str" />

                <TextView
                    android:id="@+id/tv_major_type"
                    style="@style/basic_info_value_style"
                    android:gravity="end"
                    android:hint="@string/major_type_hint" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_contact_email"
                style="@style/nomal_margin_left"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bar_height"
                android:background="@drawable/edit_frame_bg"
                android:gravity="center_vertical"
                android:onClick="onClick" >

                <TextView
                    style="@style/basic_info_titile_style"
                    android:text="@string/contact_email_str" />

                <TextView
                    android:id="@+id/tv_contact_email"
                    style="@style/basic_info_value_style"
                    android:gravity="end"
                    android:hint="@string/contact_email_hint" />
            </RelativeLayout>
            <!-- 联系电话 -->

            <RelativeLayout
                android:id="@+id/rl_contact_number"
                style="@style/nomal_margin_left"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bar_height"
                android:background="@drawable/edit_frame_bg"
                android:gravity="center_vertical"
                android:onClick="onClick" >

                <TextView
                    style="@style/basic_info_titile_style"
                    android:text="@string/contact_number_str" />

                <TextView
                    android:id="@+id/tv_contact_number"
                    style="@style/basic_info_value_style"
                    android:gravity="end"
                    android:hint="@string/contact_number_hint" />
            </RelativeLayout>
            <!-- 专业名称 -->

            <RelativeLayout
                android:id="@+id/rl_major_name"
                style="@style/nomal_margin_left"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bar_height"
                android:background="@drawable/edit_frame_bg"
                android:gravity="center_vertical"
                android:onClick="onClick" >

                <TextView
                    style="@style/basic_info_titile_style"
                    android:text="@string/major_name_str" />

                <TextView
                    android:id="@+id/tv_major_name"
                    style="@style/basic_info_value_style"
                    android:gravity="end"
                    android:hint="@string/major_name_hint" />
            </RelativeLayout>
            <!-- 最高学历 -->

            <RelativeLayout
                android:id="@+id/rl_highest_education_layout"
                style="@style/nomal_margin_left"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bar_height"
                android:background="@drawable/edit_frame_bg"
                android:gravity="center_vertical"
                android:onClick="onClick" >

                <TextView
                    style="@style/basic_info_titile_style"
                    android:text="@string/highest_education_str" />

                <TextView
                    android:id="@+id/tv_highest_education"
                    style="@style/basic_info_value_style"
                    android:gravity="end"
                    android:hint="@string/highest_education_hint" />
            </RelativeLayout>
            <!-- 毕业年份 -->

            <RelativeLayout
                android:id="@+id/rl_graduate_year"
                style="@style/nomal_margin_left"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bar_height"
                android:background="@drawable/edit_frame_bg"
                android:gravity="center_vertical"
                android:onClick="onClick" >

                <TextView
                    style="@style/basic_info_titile_style"
                    android:text="@string/position_filter_grade_str" />

                <TextView
                    android:id="@+id/tv_graduate_year"
                    style="@style/basic_info_value_style"
                    android:gravity="end"
                    android:hint="@string/select_graduate_year_str" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_expect_intern_area"
                style="@style/nomal_margin_left"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bar_height"
                android:background="@drawable/edit_frame_bg"
                android:gravity="center_vertical"
                android:onClick="onClick" >

                <TextView
                    android:id="@+id/tv_expect_intern_area_str"
                    style="@style/basic_info_titile_style"
                    android:text="@string/expect_intern_area_str" />

                <TextView
                    android:id="@+id/tv_expect_intern_area"
                    style="@style/basic_info_value_style"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@id/tv_expect_intern_area_str"
                    android:layout_toRightOf="@id/tv_expect_intern_area_str"
                    android:ellipsize="end"
                    android:gravity="end"
                    android:hint="@string/select_expect_intern_area_hint"
                    android:singleLine="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_can_internship_stage"
                style="@style/nomal_margin_left"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bar_height"
                android:background="@drawable/edit_frame_bg"
                android:gravity="center_vertical"
                android:onClick="onClick" >

                <TextView
                    style="@style/basic_info_titile_style"
                    android:text="@string/can_internship_stage_str" />

                <TextView
                    android:id="@+id/tv_can_internship_stage"
                    style="@style/basic_info_value_style"
                    android:gravity="end"
                    android:hint="@string/select_can_internship_stage_hint" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_dear_hr"
                style="@style/nomal_margin_left"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bar_height"
                android:gravity="center_vertical"
                android:onClick="onClick" >

                <TextView
                    android:id="@+id/tv_dear_hr_str"
                    style="@style/basic_info_titile_style"
                    android:layout_centerVertical="true"
                    android:text="@string/dear_hr_str" />

                <TextView
                    android:id="@+id/tv_dear_hr"
                    style="@style/basic_info_value_style"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_toEndOf="@id/tv_dear_hr_str"
                    android:layout_toRightOf="@id/tv_dear_hr_str"
                    android:gravity="end"
                    android:hint="@string/dear_hr_hint2"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:singleLine="true" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_add"
            style="@style/nomal_margin_left_right"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_bg"
            android:onClick="onClick"
            android:text="@string/enter_talentbank_str"
            android:textColor="@color/main_bg"
            android:textSize="17sp" />
    </LinearLayout>

</ScrollView>