<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/nomal_margin_left_right"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_bg_height"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_frame_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_str"
            android:textColor="@color/title_bar_font_color"
            android:textSize="15sp" />

        <com.shixi.gaodun.view.ClearEditTextView
            android:id="@+id/cetv_forgetpwd_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="20dp"
            android:background="@color/transparent"
            android:hint="@string/phone_number_hint"
            android:singleLine="true"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/nomal_margin_left_right"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_bg_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_frame_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification_code_str"
            android:textColor="@color/title_bar_font_color"
            android:textSize="15sp" />

        <com.shixi.gaodun.view.ClearEditTextView
            android:id="@+id/cetv_forgetpwd_verification_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:hint="@string/verification_code_hint"
            android:singleLine="true"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_forgetpwd_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="0"
            android:background="@drawable/verification_code_btn_bg"
            android:enabled="false"
            android:onClick="onClick"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:textColor="@color/verification_code_bg"
            android:textSize="13sp"
            android:text="@string/gain_verification_code_str" />
    </LinearLayout>

    <LinearLayout
        style="@style/nomal_margin_left_right"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_bg_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_frame_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password_str"
            android:textColor="@color/title_bar_font_color"
            android:textSize="15sp" />

        <com.shixi.gaodun.view.ClearEditTextView
            android:id="@+id/cetv_forgetpwd_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:hint="@string/new_password_hint"
            android:singleLine="true"
            android:textSize="15sp" />

        <FrameLayout
            android:id="@+id/fl_register_show_password"
            android:layout_width="@dimen/edit_bg_height"
            android:layout_height="@dimen/edit_bg_height"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0"
            android:onClick="onClick" >

            <ImageView
                android:id="@+id/iv_forgetpwd_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:contentDescription="@string/app_name"
                android:src="@drawable/icon_show_password"
                 />
        </FrameLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_reset_password"
        style="@style/nomal_margin_left_right"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_bg"
        android:enabled="false"
        android:onClick="onClick"
        android:text="@string/reset_password_str"
        android:textColor="@color/main_bg"
        android:textSize="17sp" />

</LinearLayout>